// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplateRow should render templateRow 1`] = `
<tr
  data-testid="template-row"
>
  <td
    class="css-18djig3"
    color="#3570f40D"
  />
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    <span>
      <svg
        class="css-u87f64"
        data-testid="icon"
        height="1.25em"
        viewBox="0 0 1024 1024"
        width="1.25em"
      >
        <title>
          information-circle
        </title>
        <path
          d="M512 42.667c-259.206 0-469.333 210.128-469.333 469.333s210.128 469.333 469.333 469.333c259.206 0 469.333-210.128 469.333-469.333v0c0.003-0.635 0.005-1.387 0.005-2.138 0-258.027-209.173-467.2-467.2-467.2-0.752 0-1.504 0.002-2.255 0.005l0.117-0zM512 896c-212.077 0-384-171.923-384-384s171.923-384 384-384c212.077 0 384 171.923 384 384v0c-1.203 211.592-172.408 382.797-383.885 383.999l-0.115 0.001z"
        />
        <path
          d="M512 426.667c-23.564 0-42.667 19.103-42.667 42.667v0 256c0 23.564 19.103 42.667 42.667 42.667s42.667-19.103 42.667-42.667v0-256c0-23.564-19.103-42.667-42.667-42.667v0z"
        />
        <path
          d="M554.667 298.667c0 23.564-19.103 42.667-42.667 42.667s-42.667-19.103-42.667-42.667c0-23.564 19.103-42.667 42.667-42.667s42.667 19.103 42.667 42.667z"
        />
      </svg>
    </span>
  </td>
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    0
  </td>
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    1
  </td>
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  />
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    <button
      class="css-1n3qdwa-button denali-button"
      type="submit"
    >
      Update
    </button>
    
  </td>
</tr>
`;

exports[`TemplateRow should render templaterow with pop up 1`] = `
<tr
  data-testid="template-row"
>
  <td
    class="css-18djig3"
    color="#3570f40D"
  >
    aws
  </td>
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    <span>
      <svg
        class="css-u87f64"
        data-testid="icon"
        height="1.25em"
        viewBox="0 0 1024 1024"
        width="1.25em"
      >
        <title>
          information-circle
        </title>
        <path
          d="M512 42.667c-259.206 0-469.333 210.128-469.333 469.333s210.128 469.333 469.333 469.333c259.206 0 469.333-210.128 469.333-469.333v0c0.003-0.635 0.005-1.387 0.005-2.138 0-258.027-209.173-467.2-467.2-467.2-0.752 0-1.504 0.002-2.255 0.005l0.117-0zM512 896c-212.077 0-384-171.923-384-384s171.923-384 384-384c212.077 0 384 171.923 384 384v0c-1.203 211.592-172.408 382.797-383.885 383.999l-0.115 0.001z"
        />
        <path
          d="M512 426.667c-23.564 0-42.667 19.103-42.667 42.667v0 256c0 23.564 19.103 42.667 42.667 42.667s42.667-19.103 42.667-42.667v0-256c0-23.564-19.103-42.667-42.667-42.667v0z"
        />
        <path
          d="M554.667 298.667c0 23.564-19.103 42.667-42.667 42.667s-42.667-19.103-42.667-42.667c0-23.564 19.103-42.667 42.667-42.667s42.667 19.103 42.667 42.667z"
        />
      </svg>
    </span>
  </td>
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    2
  </td>
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    2
  </td>
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  />
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    <button
      class="css-q0sfmk-button denali-button"
      type="submit"
    >
      Update
    </button>
    
  </td>
</tr>
`;

exports[`TemplateRow should render with description 1`] = `
<tr
  data-testid="template-row"
>
  <td
    class="css-18djig3"
    color="#3570f40D"
  />
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    <span>
      <svg
        class="css-u87f64"
        data-testid="icon"
        height="1.25em"
        viewBox="0 0 1024 1024"
        width="1.25em"
      >
        <title>
          information-circle
        </title>
        <path
          d="M512 42.667c-259.206 0-469.333 210.128-469.333 469.333s210.128 469.333 469.333 469.333c259.206 0 469.333-210.128 469.333-469.333v0c0.003-0.635 0.005-1.387 0.005-2.138 0-258.027-209.173-467.2-467.2-467.2-0.752 0-1.504 0.002-2.255 0.005l0.117-0zM512 896c-212.077 0-384-171.923-384-384s171.923-384 384-384c212.077 0 384 171.923 384 384v0c-1.203 211.592-172.408 382.797-383.885 383.999l-0.115 0.001z"
        />
        <path
          d="M512 426.667c-23.564 0-42.667 19.103-42.667 42.667v0 256c0 23.564 19.103 42.667 42.667 42.667s42.667-19.103 42.667-42.667v0-256c0-23.564-19.103-42.667-42.667-42.667v0z"
        />
        <path
          d="M554.667 298.667c0 23.564-19.103 42.667-42.667 42.667s-42.667-19.103-42.667-42.667c0-23.564 19.103-42.667 42.667-42.667s42.667 19.103 42.667 42.667z"
        />
      </svg>
    </span>
  </td>
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    2
  </td>
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    2
  </td>
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  />
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    <button
      class="css-q0sfmk-button denali-button"
      type="submit"
    >
      Update
    </button>
    
  </td>
</tr>
`;

exports[`TemplateRow should render without pop up 1`] = `
<tr
  data-testid="template-row"
>
  <td
    class="css-18djig3"
    color="#3570f40D"
  />
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    <span>
      <svg
        class="css-u87f64"
        data-testid="icon"
        height="1.25em"
        viewBox="0 0 1024 1024"
        width="1.25em"
      >
        <title>
          information-circle
        </title>
        <path
          d="M512 42.667c-259.206 0-469.333 210.128-469.333 469.333s210.128 469.333 469.333 469.333c259.206 0 469.333-210.128 469.333-469.333v0c0.003-0.635 0.005-1.387 0.005-2.138 0-258.027-209.173-467.2-467.2-467.2-0.752 0-1.504 0.002-2.255 0.005l0.117-0zM512 896c-212.077 0-384-171.923-384-384s171.923-384 384-384c212.077 0 384 171.923 384 384v0c-1.203 211.592-172.408 382.797-383.885 383.999l-0.115 0.001z"
        />
        <path
          d="M512 426.667c-23.564 0-42.667 19.103-42.667 42.667v0 256c0 23.564 19.103 42.667 42.667 42.667s42.667-19.103 42.667-42.667v0-256c0-23.564-19.103-42.667-42.667-42.667v0z"
        />
        <path
          d="M554.667 298.667c0 23.564-19.103 42.667-42.667 42.667s-42.667-19.103-42.667-42.667c0-23.564 19.103-42.667 42.667-42.667s42.667 19.103 42.667 42.667z"
        />
      </svg>
    </span>
  </td>
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    2
  </td>
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    2
  </td>
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  />
  <td
    class="css-1s8u38g"
    color="#3570f40D"
  >
    <button
      class="css-q0sfmk-button denali-button"
      type="submit"
    >
      Update
    </button>
    
  </td>
</tr>
`;
